--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,7 @@ repos:
     -   id: ruff
         args:
         - --fix
+        - --extend-ignore=E501,F811
 -   repo: https://github.com/psf/black
     rev: 23.3.0
     hooks:
